syntax = "proto3";

option java_multiple_files = true;
//don't touch on package! java_package customise the packagename on code
package euromil;
option java_package = "euromilClient";

// The euromil service definition.
service Euromil {
  // Sends a greeting
  rpc RegisterEuroMil (RegisterRequest) returns (RegisterReply);
}

// The request message containing the Euromil key and the digital check ID.
message RegisterRequest {
  string key = 1;
  string checkid = 2;
}

// The response message containing the success or failure of the registration
message RegisterReply {
  string message = 1;
}
